<resources>
    <string name="app_name">Mavra Guide</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myMenu">Меню</string>
    <string name="eat">Еда</string>
    <string name="pizza">Пиццы</string>
    <string name="tortilla">Тортильи</string>
    <string name="pita">Питы</string>
    <string name="drinks">Напитки</string>
    <string name="smoothies">Смузи</string>
    <string name="milk_shake">Молочный коктель</string>
    <string name="craft_tea">Крафтовый чай</string>
    <string name="jobObligations">Обязательства и Права</string>
    <string name="video_photo">Видео/Фото</string>
    <string name="tests">Тесты</string>
    <string name="stores">Пиццерии</string>
    <string name="staff">Персонал</string>
    <string name="settings">Настройки</string>
    <string name="administrator_rights">Права Админестратора</string>
    <string name="settings_default_username">Yevgen</string>
    <string name="settings_user_rank_header">Должность</string>
    <string name="settings_account">Аккаунт</string>
    <string name="settings_number_phone_default">+380 000000000</string>
    <string name="settings_click_to_change_name">Нажмите, чтобы изменить имя и фамилию</string>
    <string name="user_rank">Должность</string>
    <string name="settings_work_place">Место работы</string>
    <string name="register_default_hint_phone">+380</string>
    <string name="register_enter_your_phone">Введите ваш номер телефона и нажмите далее.</string>
    <string name="register_code_info_sms">Мы оправили SMS с кодом на Ваш номер телефона</string>
    <string name="register_code_tv_enter_code">Введите код</string>
    <string name="title_your_namber_phone">Ваш номер телефона</string>
    <string name="title_input_code">Введите проверочный код</string>
    <string name="title_verification">Верификация</string>
    <string name="settings_actions_menu_title_account_exit">Выход из аккаунта</string>
    <string name="enter_code_wellcom">Добро пожаловать.</string>
    <string name="user_change_name_string_name">Имя</string>
    <string name="enter_code_default_hint">______</string>
    <string name="user_change_name_string_surname">Фамилия</string>
    <string name="user_change_name_inut_fullname">Введите Имя и Фамилию</string>
    <string name="toast_data_updated">Данные обновлены</string>
    <string name="click_change_workplace">Нажмите, чтобы изменить место работы</string>
    <string name="click_change_rank">Нажмите, чтобы изменить должность</string>
    <string name="click_change_phone_number">Нажмите, чтобы изменить телефон</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="photo">photo</string>
    <string name="get_admin_rights">Права админестратора</string>
</resources>