<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_settings_header_bloc"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_header_height"
        android:background="@color/mainMavra_color_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/im_settings_user_photo"
            android:src="@drawable/icons_portable"
            app:civ_border_color="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/settings_circle_image_view_icon_user_photo" />

        <TextView
            android:id="@+id/tv_settings_user_full_name_header"
            style="@style/Settings_small_text"
            tools:text="@string/settings_default_username"
            android:textColor="@color/white"
            android:textSize="@dimen/settings_tv_normal_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/im_settings_user_photo"
            app:layout_constraintTop_toTopOf="@+id/im_settings_user_photo" />

        <TextView
            android:id="@+id/tv_settings_user_rank_header"
            style="@style/Settings_small_text_button"
            android:layout_marginStart="@dimen/margin_start"
            tools:text="@string/settings_user_rank_header"
            android:textColor="@color/colorWhiteDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/im_settings_user_photo"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_user_full_name_header" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_settings_account"
        style="@style/Settings_small_text"
        android:text="@string/settings_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_settings_header_bloc" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_setting_button_change_name"
        style="@style/Settings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_settings_account">

        <TextView
            android:id="@+id/tv_settings_change_username"
            style="@style/Settings_normal_text_button"
            tools:text="@string/settings_default_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_settings_click_to_change_name"
            style="@style/Settings_small_text_button"
            android:text="@string/settings_click_to_change_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_change_username" />

        <View
            android:id="@+id/settings_strip_button_username"
            style="@style/Settings_strip_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_click_to_change_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_setting_button_change_phone"
        style="@style/Settings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/cl_setting_button_change_name">

        <TextView
            android:id="@+id/tv_settings_change_user_phone"
            style="@style/Settings_normal_text_button"
            tools:text="@string/settings_number_phone_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_settings_click_to_change_phone"
            style="@style/Settings_small_text_button"
            android:text="@string/settings_click_to_change_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_change_user_phone" />

        <View
            android:id="@+id/settings_strip_button_phone"
            style="@style/Settings_strip_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_click_to_change_phone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_setting_button_change_rank"
        style="@style/Settings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/cl_setting_button_change_phone">

        <TextView
            android:id="@+id/tv_settings_change_user_rank"
            style="@style/Settings_normal_text_button"
            tools:text="@string/user_rank"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_settings_click_to_change_user_rank"
            style="@style/Settings_small_text_button"
            android:text="@string/settings_click_to_change_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_change_user_rank" />

        <View
            android:id="@+id/settings_strip_button_rank"
            style="@style/Settings_strip_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_click_to_change_user_rank" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_setting_button_change_work_place"
        style="@style/Settings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/cl_setting_button_change_rank">

        <TextView
            android:id="@+id/tv_settings_change_work_place"
            style="@style/Settings_normal_text_button"
            tools:text="@string/settings_work_place"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_settings_click_to_change_work_place"
            style="@style/Settings_small_text_button"
            android:text="@string/settings_click_to_change_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_change_work_place" />

        <View
            android:id="@+id/settings_strip_button_work_place"
            style="@style/Settings_strip_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_click_to_change_work_place" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/im_settings_camera"
        android:src="@drawable/icon_camera"
        app:civ_border_color="@color/black"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/cl_settings_header_bloc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_settings_header_bloc"
        style="@style/setting_circle_image_view_camera" />

</androidx.constraintlayout.widget.ConstraintLayout>